stage-04: implement location-aware driver matching